Updating documentation. Few problems to sort, but they are minor and now the functions work. I will turn Al's example into vignette where we use our functions

--- a/orchaRd/DESCRIPTION
+++ b/orchaRd/DESCRIPTION
@@ -21,7 +21,9 @@ Imports: stats,
     purrr,
     metafor,
     tibble,
-    stringr
+    stringr,
+    ggplot2,
+    ggbeeswarm
 Suggests: testthat,
     knitr,
     rmarkdown
