--- a/orchaRd/DESCRIPTION
+++ b/orchaRd/DESCRIPTION
@@ -15,7 +15,8 @@ License: GPL (>=2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Imports: stats,
+Imports: tidyverse, 
+    stats,
     graphics,
     utils,
     purrr,
