Update vignette to statis

--- a/orchaRd/DESCRIPTION
+++ b/orchaRd/DESCRIPTION
@@ -25,7 +25,8 @@ Imports: tidyverse,
     stringr,
     ggplot2,
     ggbeeswarm
-Suggests: testthat,
+Suggests: R.rsp, 
+  testthat,
     knitr,
     rmarkdown
-VignetteBuilder: knitr
+VignetteBuilder: R.rsp
