Updating documentation to orchaRd

--- a/orchaRd/NAMESPACE
+++ b/orchaRd/NAMESPACE
@@ -2,11 +2,13 @@
 
 S3method(print,orchard)
 export(Zr_to_r)
-export(cont_gen)
+export(caterpillars)
 export(firstup)
 export(get_data)
 export(get_est)
 export(get_pred)
+export(i2_ml)
 export(mod_results)
 export(orchard_plot)
+export(r2_ml)
 export(submerge)
