--- a/orchaRd/NAMESPACE
+++ b/orchaRd/NAMESPACE
@@ -8,7 +8,9 @@ export(get_data)
 export(get_est)
 export(get_pred)
 export(i2_ml)
+export(marginalised_means)
 export(mod_results)
 export(orchard_plot)
+export(pred_interval_esmeans)
 export(r2_ml)
 export(submerge)
